set primary branch

--- a/style.css
+++ b/style.css
@@ -8,5 +8,6 @@
  * Author URI:        cumulusmedia.com
  * Template:          wp-cmls-base
  * GitHub Theme URI:  cumulus-digital/wp-wwo-child
+ * Primary Branch:    main
  * License:           UNLICENSED
  */
