no shadow on logo hover, remove logo from footer

--- a/src/frontend/scss/index.scss
+++ b/src/frontend/scss/index.scss
@@ -4,10 +4,14 @@
 	}
 }
 
-.masthead .logo  {
+body > .masthead .logo  {
 	@include hover {
 		filter: none;
 	}
 }
+body > .footer .logo {
+	display: none;
+}
+
 
 @import './hc-offcanvas/_';
