fix wrong selector for logo hover filter

--- a/src/frontend/scss/index.scss
+++ b/src/frontend/scss/index.scss
@@ -4,9 +4,11 @@
 	}
 }
 
-body > .masthead .logo  {
+body > .masthead .logo a  {
 	@include hover {
-		filter: none;
+		img {
+			filter: none;
+		}
 	}
 }
 body > .footer .logo {
