--- a/src/frontend/scss/hc-offcanvas/_.scss
+++ b/src/frontend/scss/hc-offcanvas/_.scss
@@ -24,8 +24,8 @@ body.hc-nav-open {
 // Open off-canvas below fixed masthead
 .hc-offcanvas-nav,
 .hc-offcanvas-nav .nav-container {
-	// Trick to avoid minification issue with "0px" becomming "0"
-	--wp-admin-bar-height: calc(1px - 1px);
+	// needed to fix minification error
+	--wp-admin-bar-height: -1px;
 	--viewport-height: 100vh;
 	// Only use on iOS Safari
 	@supports (-webkit-touch-callout: none) {
