--- a/src/frontend/scss/index.scss
+++ b/src/frontend/scss/index.scss
@@ -15,10 +15,15 @@ body > .footer .logo {
 	display: none;
 }
 
-// Tag clouds
+// Widget links
+.wp-block-tag-cloud a,
+.widget_tag_cloud a {
+	margin-right: .15em;
+}
 .wp-block-tag-cloud a,
 .widget_tag_cloud a,
 .widget-container .wp-block-latest-posts a {
+	margin-right: .25em;
 	text-decoration: none;
 
 	@include hover {
