--- a/src/frontend/scss/hc-offcanvas/social.scss
+++ b/src/frontend/scss/hc-offcanvas/social.scss
@@ -1,25 +1,35 @@
 .hc-offcanvas-nav .social {
 	display: flex;
+	flex-direction: row;
 	gap: .25em;
 	align-items: center;
 	justify-content: center;
 
-	background: linear-gradient(0deg, rgba(0, 0, 0, 0) 99%, var(--#{$PREFIX}-color-main_menu-foreground) 101%);
-	padding: .5em 0;
+	background-color: var(--#{$PREFIX}-color-main_menu-background);
+	background-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 99%, var(--#{$PREFIX}-color-main_menu-foreground) 101%);
+	margin-top: 0 !important;
+	padding: .5em .5em;
+	/*
 	position: absolute;
+	z-index: 2;
 	bottom: 0;
 	left: 0;
 	width: 100%;
+	*/
 
 	text-align: center;
 
 	li {
 		display: inline-block;
-		font-size: 1.5rem;
+		font-size: .75rem;
 	}
 	a {
 		background-color: var(--#{$PREFIX}-color-main_menu-foreground);
 		transition: all .2s !important;
 		mask-size: 65%;
+
+		@include hover {
+			background-color: var(--#{$PREFIX}-color-main_menu-foreground-hover_background);
+		}
 	}
 }
