--- a/src/frontend/scss/hc-offcanvas/_.scss
+++ b/src/frontend/scss/hc-offcanvas/_.scss
@@ -23,6 +23,12 @@ body.hc-nav-open {
 
 .hc-offcanvas-nav {
 
+	font-size: .8rem;
+
+	@include phone {
+		font-size: 1rem;
+	}
+
 	// Open below fixed masthead
 	&,& .nav-container {
 		display: flex;
@@ -148,7 +154,7 @@ body.hc-nav-open {
 		left: 0;
 		width: 100%;
 		background-color: var(--#{$PREFIX}-color-main_menu-background);
-		background-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 99%, var(--#{$PREFIX}-color-main_menu-foreground) 101%);
+		//background-image: linear-gradient(180deg, var(--#{$PREFIX}-color-main_menu-foreground) 0%, rgba(0, 0, 0, 0) 1.5%);
 
 		&::before {
 			content: '';
@@ -157,6 +163,35 @@ body.hc-nav-open {
 			position: absolute;
 			top: -1.25em;
 			width: 100%;
+		}
+
+		.affiliate-login {
+			display: block;
+			background: rgba(0,0,0,0.5);
+			color: var(--#{$PREFIX}-color-main_menu-foreground);
+			letter-spacing: .01em;
+			font-size: .8em;
+			text-align: center;
+			text-transform: uppercase;
+			font-weight: bold;
+			padding: .75em;
+			opacity: 0.8;
+
+			&::before {
+				content: '\1F512\00FE0E';
+				color: transparent;
+				text-shadow: 0 0 1px var(--#{$PREFIX}-color-main_menu-foreground);
+				margin-right: .5em;
+			}
+
+			@include phone {
+				//font-size: .8em;
+			}
+
+			@include hover {
+				background: var(--#{$PREFIX}-color-main_menu-foreground-hover_background);
+				opacity: 1;
+			}
 		}
 	}
 
