--- a/src/frontend/scss/hc-offcanvas/_.scss
+++ b/src/frontend/scss/hc-offcanvas/_.scss
@@ -163,10 +163,10 @@ body.hc-nav-open {
 	.nav-highlight > .nav-item-wrapper .nav-item-link {
 		background-image: linear-gradient(
 			180deg,
-			rgba(0, 0, 0, 0) -50%,
-			var(--#{$PREFIX}-color-highlight) 1500%
+			var(--#{$PREFIX}-color-main_menu-background) -80%,
+			var(--#{$PREFIX}-color-highlight) 500%
 		);
-		text-shadow: 1px 1px 1px var(--#{$PREFIX}-color-main_menu-background);
+		text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
 	}
 
 	// Divider for links with submenues
